# ProjectLensAI

./: .env.example  .env.local.example  .env.production.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  audit-workflow.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  m1-workflow.js  m2-workflow.js  pyproject.toml
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/.claude-flow/data/: pending-insights.jsonl
apps/backend/.claude-flow/sessions/: current.json
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 3f62cab78965_create_report_management_tables.py  782274bc742a_add_users_table.py
apps/backend/docs/audit/: production-readiness-2026-07-11.md
apps/backend/src/: main.py
apps/backend/src/ai_core/chat/: __init__.py  benchmark.py  citations.py  config.py  database.py  exceptions.py  message_manager.py  models.py  orchestrator.py  session_manager.py  streaming.py  validation.py
apps/backend/src/ai_core/chunking/: __init__.py  base.py  benchmark.py  configuration.py  exceptions.py  factory.py  hooks.py  models.py  pipeline.py  registry.py  validation.py
apps/backend/src/api/: dependencies.py  exceptions.py  middleware.py
apps/backend/src/api/v1/: analysis.py  (+8 more)
apps/backend/src/auth/: dependencies.py  jwt.py  password.py
apps/backend/src/config/: logging.py  settings.py
apps/backend/src/core/: bootstrap.py
apps/backend/src/database/: __init__.py  base.py  mixins.py  session.py
apps/backend/src/document_processing/: __init__.py  exceptions.py  lifecycle.py  metadata.py  pipeline.py
apps/backend/src/jobs/: base.py
apps/backend/src/memory/: base.py  postgres.py
apps/backend/src/repository/: base.py  collection.py  report.py  version.py
apps/backend/src/services/: __init__.py  collection_service.py  processing_service.py  report_service.py
apps/backend/src/storage/: __init__.py  base.py  local.py  supabase.py
apps/backend/src/workflows/: base.py  chat.py
apps/backend/tests/: conftest.py  test_background_processing.py  test_cleaner_registry.py  test_cleaners.py  test_collection_repository.py  test_collection_service.py  test_collections_api.py  test_health.py  test_metadata_extractor.py  test_parsed_document_model.py  test_parser_registry.py  test_processing_pipeline.py  test_processing_service.py  test_report_repository.py  test_report_service.py  test_reports_api.py  test_version_repository.py
apps/backend/tests/chat/: __init__.py  fixtures.py  test_benchmark.py  test_citations.py  test_message_manager.py  test_models.py  test_orchestrator.py  test_session_manager.py  test_streaming.py  test_validation.py
apps/backend/tests/chunking/: test_benchmark.py  test_configuration.py  test_fixed_chunker.py  test_heading_aware_chunker.py  test_hooks.py  test_models.py  test_pipeline.py  test_recursive_chunker.py  test_registry.py  test_validation.py
apps/backend/tests/context/: test_benchmark.py  test_budget.py  test_chunk_selection.py  test_conversation.py  test_hooks.py  test_metadata.py  test_models.py  test_pipeline.py  test_registry.py  test_strategies.py  test_validation.py
apps/backend/tests/embedding/: conftest.py  test_benchmark.py  test_configuration.py  test_hooks.py  test_models.py  test_ollama_provider.py  test_pipeline.py  test_registry.py  test_sentence_transformer.py  test_validation.py
apps/backend/tests/llm/: __init__.py  fixtures.py  test_benchmark.py  test_models.py  test_ollama_provider.py  test_prompt_builder.py  test_registry.py  test_streaming.py  test_validation.py
apps/backend/tests/retrieval/: test_benchmark.py  test_dense.py  test_hooks.py  test_hybrid.py  test_models.py  test_multi_query.py  test_pipeline.py  test_registry.py  test_rerankers.py  test_validation.py
apps/backend/tests/vector_store/: test_benchmark.py  test_chroma_store.py  test_indexing.py  test_models.py  test_pgvector_store.py  test_registry.py  test_validation.py
(+233 files in other folders)
