[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectlens-backend"
version = "0.1.0"
description = "ProjectLens AI - Intelligent document analysis platform"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "python-multipart>=0.0.6",
    "httpx>=0.26,<1",
    "supabase>=2.0,<3",
    "pymupdf>=1.23,<2",
    "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.2,<1",
    "black>=24.1,<25",
    "mypy>=1.8,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/api/v1/chat.py" = ["B008"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
